--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ button {
             <input type="text" placeholder="Enter Username" name="username" required>
             <label>Password : </label> 
             <input type="password" placeholder="Enter Password" name="password" required>
-            <button type="submit">Login</button> 
+            <button type="submit" formaction="https://www.w3docs.com">Giriş Yap</button> 
             <input type="checkbox" checked="checked"> Remember me 
             <button type="button" class="cancelbtn"> Cancel</button> 
             Forgot <a href="#"> password? </a> 
