--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             <input type="text" name="username" id="username" placeholder="username">
             <input type="password" name="pass" id="pass" placeholder="password">
            <div class="btns">
-            <button type="submit">Login</button>
+             <form action="https://www.w3docs.com/">
+         <button type="submit">Log In</button>
             <a href="./registration.html"><button type="button" id="sign-up">Sign Up</button></a>
            </div>
             
